# local-agent

./: .gitignore  Makefile  README.md  __main__.py  config.py  main.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_agents.py
.cursor/rules/core-rules/: auto-patterns-agent.mdc  rule-generating-agent.mdc
.cursor/rules/global-rules/: naming-and-location.mdc  ts-md-auto.mdc
agents/: __init__.py  code.py  finance.py  general.py  init_agents.py  middleware.py  search.py  settings.py  system.py  whatsapp.py
api/: __init__.py  main.py  settings.py  websocket.py
api/routes/: agents.py  health.py  teams.py  websocket.py
data/: whatsapp_memory.db
scripts/: __init__.py  run.py  setup.py
teams/: __init__.py  collaborative_team.py
ui/: __init__.py  agent_chat.py
ui/web/: package-lock.json  package.json  tailwind.config.js
ui/web/app/: globals.css  layout.tsx  page.tsx
ui/web/components/: theme-provider.tsx
ui/web/components/chat/: chat-interface.tsx
ui/web/src/app/: globals.css  layout.tsx
ui/web/src/components/: theme-toggle.tsx
ui/web/src/components/chat/: chat-interface.tsx
utils/: __init__.py  logging_config.py  model_utils.py
workspace/: __init__.py  dev_resources.py  settings.py
