[project]
name = "local-agent-agno"
version = "1.0.0"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Local Agent Team", email = "team@localagent.dev" }]
description = "Multi-Agent System using Agno framework with Ollama"

dependencies = [
  # Core framework
  "agno>=1.5.0",
  "ollama>=0.4.0",
  
  # Web framework
  "fastapi[standard]",
  "uvicorn[standard]",
  
  # Agent tools
  "duckduckgo-search",
  "yfinance",
  "requests>=2.31.0",
  
  # Utilities
  "rich>=13.0.0",
  "typer",
  "aiofiles",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "ruff", "types-requests", "types-beautifulsoup4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "ui", "teams", "utils", "workspace", "scripts"]

# Agno workspace configuration
[tool.agno]
workspace = "workspace"

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*", "ollama.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
log_cli = true
